--- a/cafemapapp/static/css/studycafeMap.css
+++ b/cafemapapp/static/css/studycafeMap.css
@@ -4,6 +4,36 @@
   font-family: 'Noto Sans KR', sans-serif !important;
 }
 
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    color: #324028;
+    padding: 10px;
+    z-index: 9999;
+    height: 50px;
+    border-bottom: 1px solid gainsboro;
+}
+
+.top-bar .home-btn {
+    display:block;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    left: 34px;
+    width: 30px; 
+    height: 30px;
+    background-size: cover;
+}
+
+.top-bar h2 {
+    font-size: 25px;
+    margin-top: 5px;
+    margin-left: 80px;
+}
+
 #map {
     width: 60%;
     height: 750px;
@@ -20,23 +50,27 @@
 .customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
 .customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
 
+/*
 .homebtn{
     width: 40px;
-    /* height: 30px; */
+    height: 30px; 
 }
+*/
 
+/*
 h2 { 
     margin-top: 0;
     margin-bottom: 10px;
     text-align: center; 
 }
-/* body{ background-color: #D9D1C7;} */
+body{ background-color: #D9D1C7;}
+*/
 
-.home{
+/* .home{
     width: 60%;
     margin: auto;
     margin-bottom: 0;
-}
+} */
 
 .studybtn{
     width:60%;
